# Cuda-Actors

./: README.MD  README.md
actor-facade-test/: CMakeLists.txt
actor-framework/: CMakeLists.txt
actor-framework/libcaf_cuda/: CMakeLists.txt  README.md
actor-framework/libcaf_cuda/caf/cuda/: AbstractUnicastBehavior.hpp  StreamPool.hpp  actor_facade.hpp  all.hpp  arguments.hpp  behavior.hpp  command.hpp  command_runner.hpp  cuda-actors.hpp  (+14 more)
actor-framework/libcaf_cuda/src/: command.cpp  device.cpp  global.cpp  helpers.cpp  manager.cpp  opencl_err.cpp  platform.cpp  program.cpp  test.cpp
custom-actors-test/: backup.cpp  behavior_test.cpp  compile_kernels.sh  gdb-log.txt  main.test.cpp  shared_mmul.cu
custom-actors-test/profiling/: concurrent_mmul_profile.txt  large_kernel_conncurrent2.txt
examples/actor-facade-example/: CMakeLists.txt  main.test.cpp  mmul.cubin  mmul.example.cpp
examples/custom-actor-examples/: .genMatrix.cu.swp  CMakeLists.txt  generate_random_matrix.fatbin  mmul.example.cpp
examples/custom-actor-examples/bu/: CMakeCache.txt  Makefile  cmake_install.cmake  test
examples/shared-memory-example/: CMakeLists.txt  main.test.cpp  mmul.example.cpp
float-double-test/: CMakeLists.txt  generate_random_matrix.fatbin  main.test.cpp  shared_mmul.cubin
test/: CMakeLists.txt  behavior_test.cpp  main.test.cpp  main.test.hpp  mmul-actors.cpp  mmul.cu
test/profiling/: large_kernel_conncurrent.txt  multi-stream-load.txt  synchronization_time.txt
uml-diagrams/: launch-kernel-sequence-diagram.txt
unit-test/: CMakeLists.txt  main.test.cpp  mmul.cubin
(+14 files in other folders)
